initialize firebase signup & login features

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
     /* background-color: #b5cde7; */
     /* background-color: #134274; */
     /* background-color: #f8f8f8; */
+    /* background-color: #077fffa6; */
 }
 
 
